--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "autoprefixer": "^9.7.0",
     "babel-node": "^0.0.1-security",
     "body-parser": "^1.20.1",
+    "cookie": "^0.5.0",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "localtunnel": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
@@ -39,7 +41,8 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.3",
     "tailwindcss": "^3.2.4",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
