--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "dependencies": {
     "autoprefixer": "^9.7.0",
     "babel-node": "^0.0.1-security",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
+    "csurf": "^1.11.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "localtunnel": "^2.0.2",
